// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mode.token() caption all bold content 1`] = `
Array [
  Object {
    "end": 10,
    "start": 0,
    "string": "	caption: ",
    "style": Array [
      "caption",
    ],
  },
  Object {
    "end": 22,
    "start": 10,
    "string": "**good one**",
    "style": Array [
      "caption",
      "lettering-bold",
    ],
  },
]
`;

exports[`mode.token() caption full 1`] = `
Array [
  Object {
    "end": 17,
    "start": 0,
    "string": "	caption (bill): ",
    "style": Array [
      "caption",
    ],
  },
  Object {
    "end": 29,
    "start": 17,
    "string": "it went well",
    "style": Array [
      "caption",
    ],
  },
]
`;

exports[`mode.token() caption multiple bolds 1`] = `
Array [
  Object {
    "end": 10,
    "start": 0,
    "string": "	caption: ",
    "style": Array [
      "caption",
    ],
  },
  Object {
    "end": 17,
    "start": 10,
    "string": "it did ",
    "style": Array [
      "caption",
    ],
  },
  Object {
    "end": 24,
    "start": 17,
    "string": "**not**",
    "style": Array [
      "caption",
      "lettering-bold",
    ],
  },
  Object {
    "end": 33,
    "start": 24,
    "string": " work at ",
    "style": Array [
      "caption",
    ],
  },
  Object {
    "end": 40,
    "start": 33,
    "string": "**all**",
    "style": Array [
      "caption",
      "lettering-bold",
    ],
  },
  Object {
    "end": 41,
    "start": 40,
    "string": "!",
    "style": Array [
      "caption",
    ],
  },
]
`;

exports[`mode.token() caption no colon 1`] = `
Array [
  Object {
    "end": 8,
    "start": 0,
    "string": "	caption",
    "style": null,
  },
]
`;

exports[`mode.token() caption no content 1`] = `
Array [
  Object {
    "end": 9,
    "start": 0,
    "string": "	caption:",
    "style": Array [
      "caption",
    ],
  },
]
`;

exports[`mode.token() caption no modifier 1`] = `
Array [
  Object {
    "end": 10,
    "start": 0,
    "string": "	caption: ",
    "style": Array [
      "caption",
    ],
  },
  Object {
    "end": 22,
    "start": 10,
    "string": "it went well",
    "style": Array [
      "caption",
    ],
  },
]
`;

exports[`mode.token() caption some bold content 1`] = `
Array [
  Object {
    "end": 10,
    "start": 0,
    "string": "	caption: ",
    "style": Array [
      "caption",
    ],
  },
  Object {
    "end": 13,
    "start": 10,
    "string": "it ",
    "style": Array [
      "caption",
    ],
  },
  Object {
    "end": 24,
    "start": 13,
    "string": "**did not**",
    "style": Array [
      "caption",
      "lettering-bold",
    ],
  },
  Object {
    "end": 29,
    "start": 24,
    "string": " work",
    "style": Array [
      "caption",
    ],
  },
]
`;

exports[`mode.token() dialogue all bold content 1`] = `
Array [
  Object {
    "end": 7,
    "start": 0,
    "string": "	bill: ",
    "style": Array [
      "dialogue",
    ],
  },
  Object {
    "end": 19,
    "start": 7,
    "string": "**good one**",
    "style": Array [
      "dialogue",
      "lettering-bold",
    ],
  },
]
`;

exports[`mode.token() dialogue full 1`] = `
Array [
  Object {
    "end": 17,
    "start": 0,
    "string": "	bill (whisper): ",
    "style": Array [
      "dialogue",
    ],
  },
  Object {
    "end": 29,
    "start": 17,
    "string": "it went well",
    "style": Array [
      "dialogue",
    ],
  },
]
`;

exports[`mode.token() dialogue multiple bolds 1`] = `
Array [
  Object {
    "end": 7,
    "start": 0,
    "string": "	bill: ",
    "style": Array [
      "dialogue",
    ],
  },
  Object {
    "end": 14,
    "start": 7,
    "string": "it did ",
    "style": Array [
      "dialogue",
    ],
  },
  Object {
    "end": 21,
    "start": 14,
    "string": "**not**",
    "style": Array [
      "dialogue",
      "lettering-bold",
    ],
  },
  Object {
    "end": 30,
    "start": 21,
    "string": " work at ",
    "style": Array [
      "dialogue",
    ],
  },
  Object {
    "end": 37,
    "start": 30,
    "string": "**all**",
    "style": Array [
      "dialogue",
      "lettering-bold",
    ],
  },
  Object {
    "end": 38,
    "start": 37,
    "string": "!",
    "style": Array [
      "dialogue",
    ],
  },
]
`;

exports[`mode.token() dialogue no colon 1`] = `
Array [
  Object {
    "end": 5,
    "start": 0,
    "string": "	bill",
    "style": null,
  },
]
`;

exports[`mode.token() dialogue no content 1`] = `
Array [
  Object {
    "end": 6,
    "start": 0,
    "string": "	bill:",
    "style": Array [
      "dialogue",
    ],
  },
]
`;

exports[`mode.token() dialogue no modifier 1`] = `
Array [
  Object {
    "end": 7,
    "start": 0,
    "string": "	bill: ",
    "style": Array [
      "dialogue",
    ],
  },
  Object {
    "end": 19,
    "start": 7,
    "string": "it went well",
    "style": Array [
      "dialogue",
    ],
  },
]
`;

exports[`mode.token() dialogue some bold content 1`] = `
Array [
  Object {
    "end": 7,
    "start": 0,
    "string": "	bill: ",
    "style": Array [
      "dialogue",
    ],
  },
  Object {
    "end": 10,
    "start": 7,
    "string": "it ",
    "style": Array [
      "dialogue",
    ],
  },
  Object {
    "end": 21,
    "start": 10,
    "string": "**did not**",
    "style": Array [
      "dialogue",
      "lettering-bold",
    ],
  },
  Object {
    "end": 26,
    "start": 21,
    "string": " work",
    "style": Array [
      "dialogue",
    ],
  },
]
`;

exports[`mode.token() metadata full 1`] = `
Array [
  Object {
    "end": 11,
    "start": 0,
    "string": "name: value",
    "style": Array [
      "metadata",
    ],
  },
]
`;

exports[`mode.token() metadata no colon 1`] = `
Array [
  Object {
    "end": 4,
    "start": 0,
    "string": "name",
    "style": null,
  },
]
`;

exports[`mode.token() metadata no space after colon 1`] = `
Array [
  Object {
    "end": 10,
    "start": 0,
    "string": "name:value",
    "style": Array [
      "metadata",
    ],
  },
]
`;

exports[`mode.token() metadata no value 1`] = `
Array [
  Object {
    "end": 5,
    "start": 0,
    "string": "name:",
    "style": null,
  },
]
`;

exports[`mode.token() page multi digit page 1`] = `
Array [
  Object {
    "end": 7,
    "start": 0,
    "string": "page 10",
    "style": Array [
      "page",
    ],
  },
]
`;

exports[`mode.token() page single digit page 1`] = `
Array [
  Object {
    "end": 6,
    "start": 0,
    "string": "page 5",
    "style": Array [
      "page",
    ],
  },
]
`;

exports[`mode.token() page without suffix 1`] = `
Array [
  Object {
    "end": 4,
    "start": 0,
    "string": "page",
    "style": null,
  },
]
`;

exports[`mode.token() page without suffix number 1`] = `
Array [
  Object {
    "end": 5,
    "start": 0,
    "string": "page ",
    "style": null,
  },
]
`;

exports[`mode.token() panel multi digit panel 1`] = `
Array [
  Object {
    "end": 8,
    "start": 0,
    "string": "panel 10",
    "style": Array [
      "panel",
    ],
  },
]
`;

exports[`mode.token() panel single digit panel 1`] = `
Array [
  Object {
    "end": 7,
    "start": 0,
    "string": "panel 2",
    "style": Array [
      "panel",
    ],
  },
]
`;

exports[`mode.token() panel without suffix 1`] = `
Array [
  Object {
    "end": 5,
    "start": 0,
    "string": "panel",
    "style": null,
  },
]
`;

exports[`mode.token() panel without suffix number 1`] = `
Array [
  Object {
    "end": 6,
    "start": 0,
    "string": "panel ",
    "style": null,
  },
]
`;

exports[`mode.token() paragraph text 1`] = `
Array [
  Object {
    "end": 63,
    "start": 0,
    "string": "The first rays of sunrise hit the house. A car waits out front.",
    "style": null,
  },
]
`;

exports[`mode.token() sfx closed modifier but no colon 1`] = `
Array [
  Object {
    "end": 1,
    "start": 0,
    "string": "	",
    "style": Array [
      "line-cm-lettering",
      "line-cm-sfx",
    ],
  },
  Object {
    "end": 4,
    "start": 1,
    "string": "sfx",
    "style": Array [
      "lettering-subject",
    ],
  },
  Object {
    "end": 5,
    "start": 4,
    "string": " ",
    "style": null,
  },
  Object {
    "end": 10,
    "start": 5,
    "string": "(gun)",
    "style": Array [
      "lettering-modifier",
    ],
  },
]
`;

exports[`mode.token() sfx full 1`] = `
Array [
  Object {
    "end": 1,
    "start": 0,
    "string": "	",
    "style": Array [
      "line-cm-lettering",
      "line-cm-sfx",
    ],
  },
  Object {
    "end": 4,
    "start": 1,
    "string": "sfx",
    "style": Array [
      "lettering-subject",
    ],
  },
  Object {
    "end": 5,
    "start": 4,
    "string": " ",
    "style": null,
  },
  Object {
    "end": 10,
    "start": 5,
    "string": "(gun)",
    "style": Array [
      "lettering-modifier",
    ],
  },
  Object {
    "end": 11,
    "start": 10,
    "string": ":",
    "style": null,
  },
  Object {
    "end": 12,
    "start": 11,
    "string": " ",
    "style": null,
  },
  Object {
    "end": 16,
    "start": 12,
    "string": "blam",
    "style": Array [
      "lettering-content",
    ],
  },
]
`;

exports[`mode.token() sfx newly opened modifier 1`] = `
Array [
  Object {
    "end": 1,
    "start": 0,
    "string": "	",
    "style": Array [
      "line-cm-lettering",
      "line-cm-sfx",
    ],
  },
  Object {
    "end": 4,
    "start": 1,
    "string": "sfx",
    "style": Array [
      "lettering-subject",
    ],
  },
  Object {
    "end": 5,
    "start": 4,
    "string": " ",
    "style": null,
  },
  Object {
    "end": 6,
    "start": 5,
    "string": "(",
    "style": Array [
      "lettering-modifier",
    ],
  },
]
`;

exports[`mode.token() sfx no colon 1`] = `
Array [
  Object {
    "end": 1,
    "start": 0,
    "string": "	",
    "style": Array [
      "line-cm-lettering",
      "line-cm-sfx",
    ],
  },
  Object {
    "end": 4,
    "start": 1,
    "string": "sfx",
    "style": Array [
      "lettering-subject",
    ],
  },
]
`;

exports[`mode.token() sfx no content 1`] = `
Array [
  Object {
    "end": 1,
    "start": 0,
    "string": "	",
    "style": Array [
      "line-cm-lettering",
      "line-cm-sfx",
    ],
  },
  Object {
    "end": 4,
    "start": 1,
    "string": "sfx",
    "style": Array [
      "lettering-subject",
    ],
  },
  Object {
    "end": 5,
    "start": 4,
    "string": ":",
    "style": null,
  },
]
`;

exports[`mode.token() sfx no modifier 1`] = `
Array [
  Object {
    "end": 1,
    "start": 0,
    "string": "	",
    "style": Array [
      "line-cm-lettering",
      "line-cm-sfx",
    ],
  },
  Object {
    "end": 4,
    "start": 1,
    "string": "sfx",
    "style": Array [
      "lettering-subject",
    ],
  },
  Object {
    "end": 5,
    "start": 4,
    "string": ":",
    "style": null,
  },
  Object {
    "end": 6,
    "start": 5,
    "string": " ",
    "style": null,
  },
  Object {
    "end": 10,
    "start": 6,
    "string": "blam",
    "style": Array [
      "lettering-content",
    ],
  },
]
`;

exports[`mode.token() sfx unclosed modifier 1`] = `
Array [
  Object {
    "end": 1,
    "start": 0,
    "string": "	",
    "style": Array [
      "line-cm-lettering",
      "line-cm-sfx",
    ],
  },
  Object {
    "end": 4,
    "start": 1,
    "string": "sfx",
    "style": Array [
      "lettering-subject",
    ],
  },
  Object {
    "end": 5,
    "start": 4,
    "string": " ",
    "style": null,
  },
  Object {
    "end": 9,
    "start": 5,
    "string": "(gun",
    "style": Array [
      "lettering-modifier",
    ],
  },
]
`;
